# voxel-game

./: .gitignore  README.md
docs/: resources.md
main/: CMakeLists.txt  conanfile.txt  generate_vs22_project.bat
main/src/: main.cpp  shader.cpp  shader.h
